--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:file:~/testdb
+
+# Swagger UI: using default path /swagger-ui/index.html
+#springdoc.swagger-ui.path=/swagger-ui/index.html
+# Ensure static resources are served (default is true)
+#spring.web.resources.add-mappings=true
